# krema

./: .clang-tidy  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  ROADMAP.md  justfile
.claude/: positioning.yml  product-quality-lessons.md  settings.json  work-state.md
.claude/agents/: arch-auditor.md  competitive-analyst.md  content-creator.md  distribution-manager.md  docs-seo.md  docs-writer.md  feature-analyst.md  kde-researcher.md  process-reviewer.md  product-quality.md  test-writer.md  visual-verifier.md
.claude/commands/: audit.md  build.md  check-docs-seo.md  commit.md  compact.md  health.md  lesson.md  release.md  verify.md
.claude/hooks/: auto-build.sh  auto-format.sh  docs-seo-trigger.sh  session-end-check.sh
.claude/rules/: documentation.md  marketing.md  token-efficiency.md
.claude/skills/: docs.md
.github/workflows/: docs-seo.yml
docs/: kwin-mcp-blur-issue.md  kwin-mcp-issues.md  m9-design-decisions.md  settings-redesign-prd.md  testing-plan.md
docs/kde/: README.md  accessibility-audit.md  accessibility-guide.md  attention-animation-reference.md  drag-and-drop.md  icon-normalization-reference.md  kaboutdata.md  kcolorscheme.md  kconfig.md  kglobalaccel.md  ki18n.md  kiconthemes.md  kirigami-theming.md  kwindow-effects.md  lessons-learned.md  multi-monitor.md  notification-badge-approaches.md  notification-badges.md  notification-watcher-protocol.md  pipewire-thumbnails.md  screen-transition-research.md  settings-window-patterns.md  statusnotifieritem.md  system-tray-apis.md  taskmanager-models.md  tasksmodel-virtual-session.md  testing-headless.md  virtual-desktops.md  wayland-layer-shell.md
docs/refactor/: phase-0-quick-wins.md  phase-1-qml-singletons.md  phase-2-kconfigxt.md  phase-3-dockview-cleanup.md  phase-4-dockmodel-split.md  phase-5-dockshell.md  phase-6-unit-tests.md
marketing/: positioning.md  strategy.md
marketing/briefs/: competitive.md  features.md
packaging/arch/: .SRCINFO  PKGBUILD
packaging/obs/: _service  apply-project-config.sh  debian.changelog  debian.control  debian.copyright  debian.rules  krema.dsc  krema.spec  project.config  project.meta.xml
scripts/: check_docs_seo.py
src/: CMakeLists.txt  com.bhyoo.krema.autostart.desktop.in  com.bhyoo.krema.desktop.in  com.bhyoo.krema.metainfo.xml  main.cpp  org.krema.desktop.in
src/app/: application.cpp  application.h
src/config/: docksettings.cpp  docksettings.h  krema.kcfg  krema.kcfgc  screensettings.cpp  screensettings.h
src/models/: dockactions.cpp  dockactions.h  dockcontextmenu.cpp  dockcontextmenu.h  dockmodel.cpp  dockmodel.h  itaskssource.h  notificationtracker.cpp  notificationtracker.h  taskiconprovider.cpp  taskiconprovider.h  tasksmodelAdapter.cpp  tasksmodelAdapter.h
src/platform/: dockplatform.h  dockplatformfactory.cpp  dockplatformfactory.h  waylanddockplatform.cpp  waylanddockplatform.h
src/qml/: DockItem.qml  PreviewPopup.qml  PreviewThumbnail.qml  SettingsDialog.qml  main.qml  qml.qrc
src/qml/settings/: AnimationsPage.qml  AppearancePage.qml  BehaviorPage.qml  FormSection.qml  IconsPage.qml  LayoutPage.qml  PanelStylePage.qml  PreviewPage.qml  ShadowPage.qml
src/qml/shaders/: acrylic_overlay.frag  acrylic_overlay.frag.qsb  outer_shadow.frag  outer_shadow.frag.qsb
src/shell/: dockshell.cpp  dockshell.h  dockview.cpp  dockview.h  dockvisibilitycontroller.cpp  dockvisibilitycontroller.h  dockwidget.cpp  dockwidget.h  multidockmanager.cpp  multidockmanager.h  previewcontroller.cpp  previewcontroller.h  settingswindow.cpp  settingswindow.h
src/style/: backgroundstyle.cpp  backgroundstyle.h  panelinheritstyle.cpp  panelinheritstyle.h
src/utils/: inputregion.cpp  inputregion.h  surfacegeometry.h  zoomcalculator.h
tests/: CMakeLists.txt
tests/docker/: Dockerfile.runtime  README.md  build-images.sh  container-smoke.sh  publish-images.sh  run-smoke.sh  targets.tsv  update-digests.sh
tests/e2e/: README.md
tests/e2e/scenarios/: 01-keyboard-nav.md  02-mouse-interaction.md  03-preview-popup.md  04-context-menu.md  05-drag-and-drop.md  06-settings.md  07-visibility.md
tests/qtest/: CMakeLists.txt  mockdockplatform.h  mocktaskssource.h  test_backgroundstyle.cpp  test_dockactions.cpp  test_dockmodel.cpp  test_dockvisibilitycontroller.cpp  test_mocktaskssource.cpp  test_notificationtracker.cpp  test_screensettings.cpp  test_taskiconprovider.cpp
tests/unit/: CMakeLists.txt  smoke_test.cpp  test_input_region.cpp  test_surface_geometry.cpp  test_zoom_calculator.cpp
tools/: notification-debugger.py
tools/shadow-test/: CMakeLists.txt  main.cpp  main.qml  outer_shadow.frag
